fixed a few subtitle errors

--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
                 <source src="./assets/videos/pigeons-in-love.mp4" type="video/mp4">
                 Your Browser does not support this file type.
                 <track
-                    src="./assets/text-tracks/pideons-in-love-english.vtt"
+                    src="./assets/text-tracks/pigeons-in-love-english.vtt"
                     kind="subtitles"
                     srclang="English"
                     label="English Captions"/>
+                <track
+                    src="./assets/text-tracks/pideons-in-love-french.vtt"
+                    kind="subtitles"
+                    srclang="French"
+                    label="French Captions"/>
             </video>
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
