--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         src="./assets/text-tracks/dog-video.vtt"
                         kind="captions"
                         srclang="English"
-                        label="English Captions"/>
+                        label="English Captions">
                 </video>
             <!-- Include a track tag with the src attribute set to "dog-video.vtt" -->
         </div>
@@ -43,12 +43,12 @@
                     src="./assets/text-tracks/pigeons-in-love-english.vtt"
                     kind="subtitles"
                     srclang="English"
-                    label="English Captions"/>
+                    label="English Captions">
                 <track
                     src="./assets/text-tracks/pideons-in-love-french.vtt"
                     kind="subtitles"
                     srclang="French"
-                    label="French Captions"/>
+                    label="French Captions">
             </video>
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
